add EMA and SMA indicators

--- a/spx_predictor_dataset_preparation.ipynb
+++ b/spx_predictor_dataset_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "4d1c2adc-3647-475d-85a2-7567d7961aa4",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "bd7c4986-8c12-448e-a130-decf1ba65282",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "c1a4a711-8c6c-43ce-b112-4c487b771359",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "8fc53699-479c-436e-83df-52d4ea384f42",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "2e7798a2-1362-4500-a883-dad9419d8051",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "33b5972f-48ed-4544-abe0-fef8ed0f596d",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "6af56a31-2952-4c7b-8068-9b1735d76434",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "id": "38b46e2a-eaa1-4bc3-a5c0-ee517f782c29",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "id": "46e4e01f-70c1-4974-9cd2-8cc7159da6de",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "id": "ff7d5c25-6cd8-44a4-bab4-b0d3eddcab99",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "id": "35d2bbef-f600-413f-a420-10f6e676f2b6",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "id": "d4d42356-2f15-4f93-b88a-68fde26e9643",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "id": "dceb007b-c54a-43f5-ae32-db416135a91c",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "id": "3a4ee18a-00b0-45bf-9aa7-efd25fb3452f",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "id": "9717efd3-3ce0-4dad-9e9d-05b1c4f5944a",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "id": "a0f7e29b-3e5b-409a-be89-b922ca1ec575",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "id": "19f69fd8-aee7-4475-a351-cb8857c489dd",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "id": "eb224c22-f077-454d-8094-b0bca533745b",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "id": "401658ce-3b2c-4bb9-b901-57cb380fcc97",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "id": "af2b9438-fe65-47bd-914f-94dd584829f8",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "id": "ddf5a9b8-d5a1-4c99-a3c9-0bd7194e0d02",
    "metadata": {},
    "outputs": [],
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "id": "8e25432a-b118-490f-aa03-d491a7ba6335",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
+   "id": "3b1aad62-8a3e-409d-90af-42d8480c7164",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Data  Otwarcie  Najwyzszy  Najnizszy  Zamkniecie      Wolumen  \\\n",
+      "0 1990-01-02    353.40     359.69     351.98      359.69   90038889.0   \n",
+      "1 1990-01-03    359.69     360.59     357.89      358.76  106850000.0   \n",
+      "2 1990-01-04    358.76     358.76     352.89      355.67   98333333.0   \n",
+      "3 1990-01-05    355.67     355.67     351.35      352.20   88072222.0   \n",
+      "4 1990-01-08    352.20     354.24     350.54      353.79   77838889.0   \n",
+      "5 1990-01-09    353.83     354.17     349.61      349.62   86227778.0   \n",
+      "6 1990-01-10    349.62     349.62     344.32      347.31   97772222.0   \n",
+      "7 1990-01-11    347.31     350.14     347.31      348.53   85772222.0   \n",
+      "8 1990-01-12    348.53     348.53     339.49      339.93  102155556.0   \n",
+      "9 1990-01-16    337.00     340.75     333.37      340.75  103372222.0   \n",
+      "\n",
+      "         Date  1 Mo  2 Mo  3 Mo  ...  30 Yr  Daily index price Change (%)  \\\n",
+      "0  1990-01-02   NaN   NaN  7.83  ...   8.00                           NaN   \n",
+      "1  1990-01-03   NaN   NaN  7.89  ...   8.04                     -0.258556   \n",
+      "2  1990-01-04   NaN   NaN  7.84  ...   8.04                     -0.861300   \n",
+      "3  1990-01-05   NaN   NaN  7.79  ...   8.06                     -0.975623   \n",
+      "4  1990-01-08   NaN   NaN  7.79  ...   8.09                      0.451448   \n",
+      "5  1990-01-09   NaN   NaN  7.80  ...   8.10                     -1.178665   \n",
+      "6  1990-01-10   NaN   NaN  7.75  ...   8.11                     -0.660717   \n",
+      "7  1990-01-11   NaN   NaN  7.80  ...   8.11                      0.351271   \n",
+      "8  1990-01-12   NaN   NaN  7.74  ...   8.17                     -2.467506   \n",
+      "9  1990-01-16   NaN   NaN  7.89  ...   8.25                      0.241226   \n",
+      "\n",
+      "   STS      MACD  MACD_Signal  RSI  Label      EMA_14      EMA_50     EMA_200  \n",
+      "0  NaN  0.000000     0.000000  NaN      0  359.690000  359.690000  359.690000  \n",
+      "1  NaN -0.074188    -0.014838  NaN      0  359.566000  359.653529  359.680746  \n",
+      "2  NaN -0.377963    -0.087463  NaN      0  359.046533  359.497313  359.640838  \n",
+      "3  NaN -0.888465    -0.247663  NaN      0  358.133662  359.211143  359.566800  \n",
+      "4  NaN -1.151468    -0.428424  NaN      1  357.554507  358.998550  359.509320  \n",
+      "5  NaN -1.677053    -0.678150  NaN      0  356.496573  358.630763  359.410918  \n",
+      "6  NaN -2.253997    -0.993319  NaN      0  355.271697  358.186812  359.290511  \n",
+      "7  NaN -2.583010    -1.311257  NaN      1  354.372804  357.808113  359.183441  \n",
+      "8  NaN -3.497388    -1.748484  NaN      0  352.447097  357.107011  358.991865  \n",
+      "9  NaN -4.108512    -2.220489  NaN      1  350.887484  356.465559  358.810354  \n",
+      "\n",
+      "[10 rows x 29 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the EMA calculation function\n",
+    "def calculate_ema(data, column_name, period):\n",
+    "    return data[column_name].ewm(span=period, adjust=False).mean()\n",
+    "\n",
+    "# Compute EMA for different periods (e.g., 14-day, 50-day, 200-day)\n",
+    "df[\"EMA_14\"] = calculate_ema(df, \"Zamkniecie\", 14)\n",
+    "df[\"EMA_50\"] = calculate_ema(df, \"Zamkniecie\", 50)\n",
+    "df[\"EMA_200\"] = calculate_ema(df, \"Zamkniecie\", 200)\n",
+    "\n",
+    "print(df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "58c2de9b-27cc-43ab-9412-b96b1634c1f4",
    "metadata": {},
    "outputs": [],
