--- a/spx_predictor_dataset_preparation.ipynb
+++ b/spx_predictor_dataset_preparation.ipynb
@@ -689,7 +689,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
+   "id": "0bfce58c-5b61-440a-8738-b1cedea130fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Data  Otwarcie  Najwyzszy  Najnizszy  Zamkniecie      Wolumen  \\\n",
+      "0 1990-01-02    353.40     359.69     351.98      359.69   90038889.0   \n",
+      "1 1990-01-03    359.69     360.59     357.89      358.76  106850000.0   \n",
+      "2 1990-01-04    358.76     358.76     352.89      355.67   98333333.0   \n",
+      "3 1990-01-05    355.67     355.67     351.35      352.20   88072222.0   \n",
+      "4 1990-01-08    352.20     354.24     350.54      353.79   77838889.0   \n",
+      "5 1990-01-09    353.83     354.17     349.61      349.62   86227778.0   \n",
+      "6 1990-01-10    349.62     349.62     344.32      347.31   97772222.0   \n",
+      "7 1990-01-11    347.31     350.14     347.31      348.53   85772222.0   \n",
+      "8 1990-01-12    348.53     348.53     339.49      339.93  102155556.0   \n",
+      "9 1990-01-16    337.00     340.75     333.37      340.75  103372222.0   \n",
+      "\n",
+      "         Date  1 Mo  2 Mo  3 Mo  ...      MACD  MACD_Signal  RSI  Label  \\\n",
+      "0  1990-01-02   NaN   NaN  7.83  ...  0.000000     0.000000  NaN      0   \n",
+      "1  1990-01-03   NaN   NaN  7.89  ... -0.074188    -0.014838  NaN      0   \n",
+      "2  1990-01-04   NaN   NaN  7.84  ... -0.377963    -0.087463  NaN      0   \n",
+      "3  1990-01-05   NaN   NaN  7.79  ... -0.888465    -0.247663  NaN      0   \n",
+      "4  1990-01-08   NaN   NaN  7.79  ... -1.151468    -0.428424  NaN      1   \n",
+      "5  1990-01-09   NaN   NaN  7.80  ... -1.677053    -0.678150  NaN      0   \n",
+      "6  1990-01-10   NaN   NaN  7.75  ... -2.253997    -0.993319  NaN      0   \n",
+      "7  1990-01-11   NaN   NaN  7.80  ... -2.583010    -1.311257  NaN      1   \n",
+      "8  1990-01-12   NaN   NaN  7.74  ... -3.497388    -1.748484  NaN      0   \n",
+      "9  1990-01-16   NaN   NaN  7.89  ... -4.108512    -2.220489  NaN      1   \n",
+      "\n",
+      "       EMA_14      EMA_50     EMA_200  SMA_14  SMA_50  SMA_200  \n",
+      "0  359.690000  359.690000  359.690000     NaN     NaN      NaN  \n",
+      "1  359.566000  359.653529  359.680746     NaN     NaN      NaN  \n",
+      "2  359.046533  359.497313  359.640838     NaN     NaN      NaN  \n",
+      "3  358.133662  359.211143  359.566800     NaN     NaN      NaN  \n",
+      "4  357.554507  358.998550  359.509320     NaN     NaN      NaN  \n",
+      "5  356.496573  358.630763  359.410918     NaN     NaN      NaN  \n",
+      "6  355.271697  358.186812  359.290511     NaN     NaN      NaN  \n",
+      "7  354.372804  357.808113  359.183441     NaN     NaN      NaN  \n",
+      "8  352.447097  357.107011  358.991865     NaN     NaN      NaN  \n",
+      "9  350.887484  356.465559  358.810354     NaN     NaN      NaN  \n",
+      "\n",
+      "[10 rows x 32 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the SMA calculation function\n",
+    "def calculate_sma(data, column_name, period):\n",
+    "    return data[column_name].rolling(window=period).mean()\n",
+    "\n",
+    "# Compute SMA for different periods (e.g., 14-day, 50-day, 200-day)\n",
+    "df[\"SMA_14\"] = calculate_sma(df, \"Zamkniecie\", 14)\n",
+    "df[\"SMA_50\"] = calculate_sma(df, \"Zamkniecie\", 50)\n",
+    "df[\"SMA_200\"] = calculate_sma(df, \"Zamkniecie\", 200)\n",
+    "\n",
+    "# Display sample rows\n",
+    "print(df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "id": "58c2de9b-27cc-43ab-9412-b96b1634c1f4",
    "metadata": {},
    "outputs": [],
@@ -697,6 +761,14 @@
     "# Saving EXTENDED data to output file\n",
     "df.to_csv('final_dataset.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93fec49d-e7ea-4dca-9926-92e732c9a523",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
